# ACT-protocol

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  PROMPT.md  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-website.yml  tmp-update-snapshots.yml
apps/cli/: package.json  tsconfig.json  vitest.config.ts
conformance/: CONFORMANCE_REPORT.json  CONFORMANCE_REPORT.md  package.json  run-conformance.ts  tsconfig.json
docs/: api-reference.md  dependency-audit.md  deployment.md  formal-methods.md  release-checklist.md  roadmap.md  security-and-privacy-guide.md  standards-adoption.md  testing-strategy.md  threat-model.md  versioning.md
examples/: README.md  package.json  tsconfig.json  vitest.config.ts
formal/: README.md
scripts/: generate-artifact-types.mjs  generate-schema-types.mjs  integration-smoke.ts  sync-schemas.mjs  validate-schemas.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/act_sdk/: __init__.py  client.py  event_builder.py
sdks/python/src/act_sdk/core/: __init__.py  canonical.py  digest.py  ids.py
sdks/python/src/act_sdk/crypto/: __init__.py  dsse.py  key_lifecycle.py  keys.py
sdks/python/tests/: conftest.py  test_canonical_errors.py  test_client.py  test_crypto_extra.py  test_digest_errors.py  test_event_builder.py  test_ids_generate.py  test_interop_typescript_signed.py  test_vectors.py
spec/: ACT-1.0.md  conformance.md  federation.md  semantic-model.md  state-machines.md
(+270 files in other folders)
