[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "act-sdk"
version = "1.0.0rc1"
description = "ACT Python SDK: ergonomic client for constructing, signing, and submitting ACT events."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/act_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
